// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package hotlap_service;

service HotlapService {
    rpc Authenticate(AuthRequest) returns (AuthResponse) {}
    rpc Record(stream DatumRequest) returns (stream DatumResponse) {}
}

message AuthRequest {

}

message AuthResponse {

}

message DatumRequest {
    string uuid = 1;
}

message DatumResponse {
    string uuid = 1;
}
